--- a/Web/Web_1920___2.html
+++ b/Web/Web_1920___2.html
@@ -6,6 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Web 1920 – 2</title>
 <style id="applicationStylesheet" type="text/css">
+	@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,200;0,300;0,400;0,500;1,300&family=Lato:ital,wght@0,300;0,400;1,300;1,400&family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;1,400&display=swap');
+	
 	.mediaViewInfo {
 		--web-view-name: Web 1920 – 2;
 		--web-view-id: Web_1920__2;
@@ -46,7 +48,7 @@
 		}
 	
 	}
-	@keyframes  {
+	/* /* /* @keyframes  {
 	
 	
 	}
@@ -54,10 +56,10 @@
 	
 	
 	}
-	@keyframes  {
+	@keyframes  { 
+	 
 	
-	
-	}
+	} */
 	#Number_of_Likes {
 		position: absolute;
 		width: 639.98px;
@@ -304,7 +306,7 @@
 		width: 54px;
 		white-space: nowrap;
 		text-align: left;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 17px;
@@ -385,7 +387,7 @@
 		width: 54px;
 		white-space: nowrap;
 		text-align: left;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 17px;
@@ -466,7 +468,7 @@
 		width: 54px;
 		white-space: nowrap;
 		text-align: left;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 17px;
@@ -547,7 +549,7 @@
 		width: 54px;
 		white-space: nowrap;
 		text-align: left;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 17px;
@@ -561,7 +563,7 @@
 		width: 181px;
 		white-space: nowrap;
 		text-align: left;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 29px;
@@ -927,7 +929,7 @@
 		width: 15px;
 		white-space: nowrap;
 		text-align: center;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 18px;
@@ -976,7 +978,7 @@
 		width: 15px;
 		white-space: nowrap;
 		text-align: center;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 18px;
@@ -1025,7 +1027,7 @@
 		width: 15px;
 		white-space: nowrap;
 		text-align: center;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 18px;
@@ -1074,7 +1076,7 @@
 		width: 7px;
 		white-space: nowrap;
 		text-align: center;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 18px;
@@ -1123,7 +1125,7 @@
 		width: 15px;
 		white-space: nowrap;
 		text-align: center;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 18px;
@@ -1172,7 +1174,7 @@
 		width: 15px;
 		white-space: nowrap;
 		text-align: center;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 18px;
@@ -1221,7 +1223,7 @@
 		width: 15px;
 		white-space: nowrap;
 		text-align: center;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 18px;
@@ -1270,7 +1272,7 @@
 		width: 15px;
 		white-space: nowrap;
 		text-align: center;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 18px;
@@ -1319,7 +1321,7 @@
 		width: 13px;
 		white-space: nowrap;
 		text-align: center;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 18px;
@@ -1368,7 +1370,7 @@
 		width: 13px;
 		white-space: nowrap;
 		text-align: center;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 18px;
@@ -1382,7 +1384,7 @@
 		width: 199px;
 		white-space: nowrap;
 		text-align: left;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 29px;
@@ -1616,7 +1618,7 @@
 		width: 171px;
 		white-space: nowrap;
 		text-align: left;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 31px;
@@ -1711,7 +1713,7 @@
 		width: 165px;
 		white-space: nowrap;
 		text-align: left;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: normal;
 		font-size: 22px;
@@ -1842,7 +1844,7 @@
 		width: 15px;
 		white-space: nowrap;
 		text-align: left;
-		font-family: Rift Soft;
+		font-family: 'Lato' Soft;
 		font-style: normal;
 		font-weight: bold;
 		font-size: 17px;
@@ -1937,7 +1939,7 @@
 		width: 160px;
 		white-space: nowrap;
 		text-align: left;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: normal;
 		font-size: 22px;
@@ -2068,7 +2070,7 @@
 		width: 15px;
 		white-space: nowrap;
 		text-align: left;
-		font-family: Rift Soft;
+		font-family: 'Lato' Soft;
 		font-style: normal;
 		font-weight: bold;
 		font-size: 17px;
@@ -2163,7 +2165,7 @@
 		width: 94px;
 		white-space: nowrap;
 		text-align: left;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: normal;
 		font-size: 22px;
@@ -2294,7 +2296,7 @@
 		width: 14px;
 		white-space: nowrap;
 		text-align: left;
-		font-family: Rift Soft;
+		font-family: 'Lato' Soft;
 		font-style: normal;
 		font-weight: bold;
 		font-size: 17px;
@@ -2389,7 +2391,7 @@
 		width: 200px;
 		white-space: nowrap;
 		text-align: left;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: normal;
 		font-size: 22px;
@@ -2520,7 +2522,7 @@
 		width: 14px;
 		white-space: nowrap;
 		text-align: left;
-		font-family: Rift Soft;
+		font-family: 'Lato' Soft;
 		font-style: normal;
 		font-weight: bold;
 		font-size: 17px;
@@ -2615,7 +2617,7 @@
 		width: 151px;
 		white-space: nowrap;
 		text-align: left;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: normal;
 		font-size: 22px;
@@ -2746,7 +2748,7 @@
 		width: 14px;
 		white-space: nowrap;
 		text-align: left;
-		font-family: Rift Soft;
+		font-family: 'Lato' Soft;
 		font-style: normal;
 		font-weight: bold;
 		font-size: 17px;
@@ -2954,7 +2956,7 @@
 		width: 103px;
 		white-space: nowrap;
 		text-align: left;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 29px;
@@ -3127,7 +3129,7 @@
 		width: 191px;
 		white-space: nowrap;
 		text-align: left;
-		font-family: Segoe UI;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 37px;
@@ -3160,7 +3162,7 @@
 		width: 97px;
 		white-space: nowrap;
 		text-align: left;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 29px;
@@ -3188,14 +3190,14 @@
 		top: 0px;
 	}
 	#COMPANY_NAME {
-		left: 77px;
+		left: 40px;
 		top: 239px;
 		position: absolute;
 		overflow: visible;
 		width: 179px;
 		white-space: nowrap;
 		text-align: center;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 34px;
@@ -3217,7 +3219,7 @@
 		width: 39px;
 		white-space: nowrap;
 		text-align: center;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 29px;
@@ -3254,7 +3256,7 @@
 		width: 37px;
 		white-space: nowrap;
 		text-align: center;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 30px;
@@ -3291,7 +3293,7 @@
 		width: 39px;
 		white-space: nowrap;
 		text-align: center;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 30px;
