--- a/Web/Web_1920___3.html
+++ b/Web/Web_1920___3.html
@@ -6,6 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Web 1920 – 3</title>
 <style id="applicationStylesheet" type="text/css">
+	@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,200;0,300;0,400;0,500;1,300&family=Lato:ital,wght@0,300;0,400;1,300;1,400&family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;1,400&display=swap');
+	
 	.mediaViewInfo {
 		--web-view-name: Web 1920 – 3;
 		--web-view-id: Web_1920__3;
@@ -40,14 +42,6 @@
 		100% {
 			opacity: 1;
 		}
-	
-	}
-	@keyframes  {
-	
-	
-	}
-	@keyframes  {
-	
 	
 	}
 	#Number_of_Likes_qu {
@@ -170,7 +164,7 @@
 		width: 23px;
 		white-space: nowrap;
 		text-align: right;
-		font-family: Sofia Pro Soft;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: normal;
 		font-size: 14px;
@@ -296,7 +290,7 @@
 		width: 54px;
 		white-space: nowrap;
 		text-align: left;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 17px;
@@ -377,7 +371,7 @@
 		width: 54px;
 		white-space: nowrap;
 		text-align: left;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 17px;
@@ -458,7 +452,7 @@
 		width: 54px;
 		white-space: nowrap;
 		text-align: left;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 17px;
@@ -539,7 +533,7 @@
 		width: 54px;
 		white-space: nowrap;
 		text-align: left;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 17px;
@@ -553,7 +547,7 @@
 		width: 181px;
 		white-space: nowrap;
 		text-align: left;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 29px;
@@ -919,7 +913,7 @@
 		width: 15px;
 		white-space: nowrap;
 		text-align: center;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 18px;
@@ -968,7 +962,7 @@
 		width: 15px;
 		white-space: nowrap;
 		text-align: center;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 18px;
@@ -1017,7 +1011,7 @@
 		width: 15px;
 		white-space: nowrap;
 		text-align: center;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 18px;
@@ -1066,7 +1060,7 @@
 		width: 7px;
 		white-space: nowrap;
 		text-align: center;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 18px;
@@ -1115,7 +1109,7 @@
 		width: 15px;
 		white-space: nowrap;
 		text-align: center;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 18px;
@@ -1164,7 +1158,7 @@
 		width: 15px;
 		white-space: nowrap;
 		text-align: center;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 18px;
@@ -1213,7 +1207,7 @@
 		width: 15px;
 		white-space: nowrap;
 		text-align: center;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 18px;
@@ -1262,7 +1256,7 @@
 		width: 15px;
 		white-space: nowrap;
 		text-align: center;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 18px;
@@ -1311,7 +1305,7 @@
 		width: 13px;
 		white-space: nowrap;
 		text-align: center;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 18px;
@@ -1360,7 +1354,7 @@
 		width: 13px;
 		white-space: nowrap;
 		text-align: center;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 18px;
@@ -1374,7 +1368,7 @@
 		width: 199px;
 		white-space: nowrap;
 		text-align: left;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 29px;
@@ -1608,7 +1602,7 @@
 		width: 171px;
 		white-space: nowrap;
 		text-align: left;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 31px;
@@ -1757,7 +1751,7 @@
 		width: 23px;
 		white-space: nowrap;
 		text-align: right;
-		font-family: Sofia Pro Soft;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: normal;
 		font-size: 14px;
@@ -1816,7 +1810,7 @@
 		width: 103px;
 		white-space: nowrap;
 		text-align: left;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 29px;
@@ -1849,7 +1843,7 @@
 		width: 97px;
 		white-space: nowrap;
 		text-align: left;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 29px;
@@ -1884,7 +1878,7 @@
 		width: 179px;
 		white-space: nowrap;
 		text-align: center;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 34px;
@@ -1906,7 +1900,7 @@
 		width: 39px;
 		white-space: nowrap;
 		text-align: center;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 29px;
@@ -1943,7 +1937,7 @@
 		width: 37px;
 		white-space: nowrap;
 		text-align: center;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 30px;
@@ -1980,7 +1974,7 @@
 		width: 39px;
 		white-space: nowrap;
 		text-align: center;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 30px;
@@ -2401,7 +2395,7 @@
 		width: 191px;
 		white-space: nowrap;
 		text-align: left;
-		font-family: Segoe UI;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 37px;
@@ -2527,7 +2521,7 @@
 		width: 23px;
 		white-space: nowrap;
 		text-align: right;
-		font-family: Sofia Pro Soft;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: normal;
 		font-size: 14px;
@@ -2653,7 +2647,7 @@
 		width: 54px;
 		white-space: nowrap;
 		text-align: left;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 17px;
@@ -2734,7 +2728,7 @@
 		width: 54px;
 		white-space: nowrap;
 		text-align: left;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 17px;
@@ -2815,7 +2809,7 @@
 		width: 54px;
 		white-space: nowrap;
 		text-align: left;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 17px;
@@ -2896,7 +2890,7 @@
 		width: 54px;
 		white-space: nowrap;
 		text-align: left;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 17px;
@@ -2910,7 +2904,7 @@
 		width: 181px;
 		white-space: nowrap;
 		text-align: left;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 29px;
@@ -3051,7 +3045,7 @@
 		width: 218px;
 		white-space: nowrap;
 		text-align: left;
-		font-family: Rift;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 29px;
