--- a/Web/Web_1920___7.html
+++ b/Web/Web_1920___7.html
@@ -6,6 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Web 1920 – 7</title>
 <style id="applicationStylesheet" type="text/css">
+	@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,200;0,300;0,400;0,500;1,300&family=Lato:ital,wght@0,300;0,400;1,300;1,400&family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;1,400&display=swap');
+	
 	.mediaViewInfo {
 		--web-view-name: Web 1920 – 7;
 		--web-view-id: Web_1920__7;
@@ -237,7 +239,7 @@
 		width: 242px;
 		white-space: nowrap;
 		text-align: left;
-		font-family: Segoe UI;
+		font-family: 'Lato';
 		font-style: normal;
 		font-weight: bold;
 		font-size: 47px;
