--- a/Web_1920___1.html
+++ b/Web_1920___1.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="medium.css">
 <link rel="stylesheet" href="small.css">
-<title>Web 1920 – 1</title>
+<title>GREENHUB</title>
 <style id="applicationStylesheet" type="text/css">
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,200;0,300;0,400;0,500;1,300&family=Lato:ital,wght@0,300;0,400;1,300;1,400&family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;1,400&display=swap');
 
